--- a/shop-web-app/Views/Account/Register.cshtml
+++ b/shop-web-app/Views/Account/Register.cshtml
@@ -61,8 +61,8 @@
                     </div>
 
                     <div class="form-group">
-                        <input class="btn btn-outline-success float-right" type="submit" value="Sign up" />
-                        <a class="btn btn-outline-secondary" asp-controller="Race" asp-action="Index">Cancel</a>
+                        <input class="btn btn-outline-success float-right" type="submit" value="Załóż konto" />
+                        <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index">Anuluj</a>
                     </div>
                 </form>
             </div>
