--- a/shop-web-app/Views/Dashboard/Index.cshtml
+++ b/shop-web-app/Views/Dashboard/Index.cshtml
@@ -20,25 +20,38 @@
                 <h4 class="text-center mb-3 mt-1">Twoje konto</h4>
                 <div class="shadow rounded">
                     <img src="https://cdn.pixabay.com/photo/2016/09/28/02/14/user-1699635_1280.png" class="rounded mx-auto d-block mt-4" style="width: 200px; height: 200px;" alt="User profile icon">
-                    <div class="p-1">
+                    <div class="p-3">
                         <div class="text-center">
-                            @Model.AppUser.Name @Model.AppUser.Surname
+                            <h5>@Model.AppUser.Name @Model.AppUser.Surname</h5>
                         </div>
-                        <ul class="list-unstyled p-2">
-                            <li>E-mail: <span class="text-secondary">@Model.AppUser.Email</span></li>
-                            <li><span class="text-secondary">Zapisany adres:</span></li>
-                            @if (Model.AppUser.AddressId.HasValue)
-                            {
-                                <li>@Model.AppUser.Address.PostalCode @Model.AppUser.Address.City, ul.@Model.AppUser.Address.Street</li>
-                                <li>woj. @Model.AppUser.Address.Voivodship.ToFriendlyString()</li>
-                            }
-                            else
-                            {
-                                <li>Brak przypisanego adresu. <a asp-area="" asp-controller="Address" asp-action="Create" asp-route-id="@Model.AppUser.Id">Przypisz adres</a></li>
-                            }
-                        </ul>
+                        <div class="p-3 bg-light rounded border">
+                            <div class="d-flex align-items-center mb-2">
+                                <i class="bi bi-envelope-fill text-secondary me-2"></i>
+                                <span class="text-secondary me-1">E-mail:</span>
+                                <span>@Model.AppUser.Email</span>
+                            </div>
+                            <div class="mt-3">
+                                <div class="d-flex align-items-center mb-2">
+                                    <i class="bi bi-geo-alt-fill text-secondary me-2"></i>
+                                    <span class="text-secondary">Adres:</span>
+                                </div>
+                                @if (Model.AppUser.AddressId.HasValue)
+                                {
+                                    <p class="mb-0">@Model.AppUser.Address.PostalCode @Model.AppUser.Address.City, ul. @Model.AppUser.Address.Street</p>
+                                    <p class="mb-0">woj. @Model.AppUser.Address.Voivodship.ToFriendlyString()</p>
+                                }
+                                else
+                                {
+                                    <p class="mb-0">Brak przypisanego adresu.</p>
+                                }
+                            </div>
+                        </div>
+                        <div class="text-center mt-3">
+                            <a type="button" class="btn btn-outline-secondary" asp-area="" asp-controller="Account" asp-action="Edit">Edytuj dane <i class="bi bi-pencil-fill"></i></a>
+                        </div>
                     </div>
                 </div>
+
             </div>
             <div class="col-md-7 col-lg-8">
 
@@ -122,60 +135,7 @@
                         </div>
                     </div>
                 }
-                <div class="album py-5 bg-light">
-                    <div class="container">
-                        <h2 class="display-4 fw-normal">Your races</h2>
-                        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                            <div class="col-md-4">
-                                <div class="card mb-4 box-shadow">
-                                    <img class="card-img-top" src="https://img-s-msn-com.akamaized.net/tenant/amp/entityid/AA1v6TB0.img?w=768&h=576&m=6" width="100%" height="225" alt="Card image cap">
-                                    <div class="card-body">
-                                        <p class="card-text">super</p>
-                                        <p class="card-text">opis</p>
-                                        <div class="d-flex justify-content-between align-items-center">
-                                            <div class="btn-group">
-                                                <a type="btn btn-success" asp-controller="Product" asp-action="Details" asp-route-id="1"
-                                                    class="btn btn-sm btn-outline-secondary">View</a>
-                                                @if (User.Identity.IsAuthenticated)
-                                                {
-                                                    <a asp-controller="Product" asp-action="Details" asp-route-id="1" class="btn btn-sm btn-outline-secondary">Edit</a>
-                                                    <a asp-controller="Product" asp-action="Details" asp-route-id="1" class="btn btn-sm btn-outline-secondary">Delete</a>
-                                                }
-                                            </div>
-                                            <small class="text-muted">ssdsds</small>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                        <h2 class="display-4 fw-normal">Your Clubs</h2>
-                        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                            <div class="col-md-4">
-                                <div class="card mb-4 box-shadow">
-                                    <img class="card-img-top" src="https://img-s-msn-com.akamaized.net/tenant/amp/entityid/AA1v6TB0.img?w=768&h=576&m=6" width="100%" height="225" alt="Card image cap">
-                                    <div class="card-body">
-                                        <p class="card-text">tytuł</p>
-                                        <p class="card-text">opis</p>
-                                        <div class="d-flex justify-content-between align-items-center">
-                                            <div class="btn-group">
-                                                <a type="btn btn-success" asp-controller="Product" asp-action="Details" asp-route-id="1"
-                                                    class="btn btn-sm btn-outline-secondary">View</a>
-                                                @if (User.Identity.IsAuthenticated)
-                                                {
-                                                    <a asp-controller="Product" asp-action="Details" asp-route-id="1" class="btn btn-sm btn-outline-secondary">Edit</a>
-                                                    <a asp-controller="Product" asp-action="Details" asp-route-id="1" class="btn btn-sm btn-outline-secondary">Delete</a>
-                                                }
-                                            </div>
-                                            <small class="text-muted">ategoria</small>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
