--- a/shop-web-app/Views/Order/Create.cshtml
+++ b/shop-web-app/Views/Order/Create.cshtml
@@ -100,8 +100,8 @@
                             voivodship = Model.AppUser.Address.Voivodship;
                         }
                         <div class="col-12">
-                            <label asp-for="DeliveryAddress.Street" class="form-label">Adres (ulica i numer domu)</label>
-                            <input asp-for="DeliveryAddress.Street" value="@street" class="form-control" placeholder="np.'ul. Parkowa 1/3'" required>
+                            <label asp-for="DeliveryAddress.Street" class="form-label">Ulica i numer domu</label>
+                            <input asp-for="DeliveryAddress.Street" value="@street" class="form-control" placeholder="np.'Parkowa 1/3'" required>
                             <span asp-validation-for="DeliveryAddress.Street" class="text-danger"></span>
                         </div>
 
