--- a/shop-web-app/Views/Product/Details.cshtml
+++ b/shop-web-app/Views/Product/Details.cshtml
@@ -24,13 +24,13 @@
                             if (j == 0)
                             {
                                 <div class="carousel-item active">
-                                    <img alt="Image" id="mainImage" src="@photo.PhotoUrl" class="rounded img-fluid" style="width: 100%;" />
+                                    <img alt="Image" id="mainImage" src="@photo.PhotoUrl" class="img-fluid rounded" style="width: 100%;" />
                                 </div>
                             }
                             else
                             {
                                 <div class="carousel-item">
-                                    <img alt="Image" id="mainImage" src="@photo.PhotoUrl" class="rounded img-fluid" style="width: 100%;"  />
+                                    <img alt="Image" id="mainImage" src="@photo.PhotoUrl" class="img-fluid rounded" style="width: 100%;"  />
                                 </div>
                             }
                             j++;
@@ -47,12 +47,31 @@
                 </div>
 
                 <!--end of col-->
-                <div class="col-lg-5 d-flex flex-column justify-content-between mr-auto ml-auto">
+                <div class="col-lg-5 d-flex flex-column justify-content-between ml-auto mr-auto">
                     <div class="mb-3">
-                        <h1 class="mb-2">@Model.Name</h1>
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <h1 class="mb-2">@Model.Name</h1>
+                            </div>
+                            @if (User.IsInRole("admin") || User.IsInRole("employee"))
+                            {
+                                <div class="bg-danger p-3 rounded bg-opacity-10">
+                                    @if (!Model.IsActive)
+                                    {
+                                        <p>Status produktu: <span class="text-danger">Niewidoczny</span></p>
+                                    }
+                                    else
+                                    {
+                                        <p>Status produktu: <span class="text-success">Widoczny</span></p>
+                                    }
+                                    <a asp-controller="Product" asp-action="ToggleActive" asp-route-id="@Model.Id" type="button" class="btn btn-outline-danger">Zmień status</a>
+                                </div>
+                            }
+                            
+                        </div>
+                        
                         <h2 class="lead mb-3">@Model.Gender.ToFriendlyString()/@Model.SubCategory.ToFriendlyString()</h2>
             
-                       
                         <div class="mt-5 mb-5">
                             <p class="lead"><b>Materiały:</b></p>
                             <ul>
